<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.dbondarenko.shpp.personalnotes.fragments.NoteFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/editTextMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_margin"
            android:background="@android:color/transparent"
            android:gravity="top|center_vertical"
            android:hint="@string/text_hint_for_message"
            android:inputType="textMultiLine"
            tools:ignore="LabelFor"/>
    </ScrollView>

    <ProgressBar
        android:id="@+id/progressBarActionsWithNote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone"/>
</FrameLayout>